--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ../../requirements.txt
+        pip install Django mysqlclient Pillow==6.2.0
     - name: Run Tests
       run: |
         python manage.py test
