myapp - update setup k8s and containerd

--- a/deploy/installation-playbooks/roles/install-kubernetes/tasks/docker.yml
+++ b/deploy/installation-playbooks/roles/install-kubernetes/tasks/docker.yml
@@ -39,6 +39,11 @@
     line: 'ExecStart=/usr/bin/dockerd -H fd://'
     backrefs: true
 
+- name: Remove containerd socket
+  file:
+    path: "/run/containerd"
+    state: absent
+
 - name: Enable docker service
   systemd:
     name: docker
