--- a/deploy/installation-playbooks/vars/defaults.yml
+++ b/deploy/installation-playbooks/vars/defaults.yml
@@ -4,6 +4,7 @@ image_name: "phongnghia/myresume"
 image_verion: "0.7"
 container_port: "8000"
 node_port: "80"
+send_mail_password: ""
 
 # for kubernetes
 google_apt_key: "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
